--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex">
   <app-sidebar></app-sidebar>
-  <div class="container-fluid">
+  <div class="dashboard-views-container">
     <br>
     <router-outlet></router-outlet>
   </div>
