--- a/angular-src/src/app/components/dashboard/dashboard.component.scss
+++ b/angular-src/src/app/components/dashboard/dashboard.component.scss
@@ -1,13 +1,4 @@
-/*
- * Dashboard
- */
-
- /* Placeholders */
-.placeholders {
-  padding-bottom: 3rem;
-}
-
-.placeholder img {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.dashboard-views-container {
+  width: 60%;
+  margin: 0 auto;
 }
