--- a/angular-src/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/angular-src/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -14,6 +14,8 @@
         </div>
       </li>
       <hr>
+
+      <!--OVERVIEW-->
       <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
         <a class="nav-link" [routerLink]="['/dashboard']">
           <div class="d-flex sidebar-link-item">
@@ -24,6 +26,20 @@
           </div>
         </a>
       </li>
+
+      <!--NEW POSTS-->
+      <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
+        <a class="nav-link" [routerLink]="['/dashboard/posts']">
+          <div class="d-flex sidebar-link-item">
+            <i class="fa fa-book fa-lg" aria-hidden="true"></i>
+            <label *ngIf="sidebarVisible" class="nav-link-text">
+            Posts
+          </label>
+          </div>
+        </a>
+      </li>
+
+      <!--NEW POST-->
       <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
         <a class="nav-link" [routerLink]="['/dashboard/post']">
           <div class="d-flex sidebar-link-item">
@@ -34,6 +50,8 @@
           </div>
         </a>
       </li>
+
+      <!--MEDIA-->
       <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
         <a class="nav-link" [routerLink]="['/dashboard/media']">
           <div class="d-flex sidebar-link-item">
@@ -44,6 +62,7 @@
           </div>
         </a>
       </li>
+
     </ul>
   </nav>
 </div>
