--- a/angular-src/src/app/components/core/components/blogpost/blogpost.component.html
+++ b/angular-src/src/app/components/core/components/blogpost/blogpost.component.html
@@ -1,48 +1,32 @@
-<div style="height: 600px; width: 800px; border: 1px solid #333;">
-  <div class="container blogpost-container-wrapper">
+<div class="container blogpost-container-wrapper">
 
-    <div class="blogpost-title">
-      Blog title
+  <div class="blogpost-title">
+    {{blogpost.title}}
+  </div>
+
+  <hr>
+  {{blogpost.id}}
+  <div class="blogpost-body" [innerHTML]="blogpost.content">
+  </div>
+
+  <br>
+
+  <div class="blogpost-footer">
+    <div class="blogpost-tags text-muted">
+      <span *ngFor="let tag of tags" class="blogpost-tag">tags</span>
     </div>
-
-    <hr>
-
-    <div class="d-flex blogpost-body">
-      <p>
-        <span class="font-size-small">the quick brown fox jumps over the lazy dog</span>
-      </p>
-      <p>
-        the quick brown fox jumps over the lazy dog
-      </p>
-      <p>
-        <span class="font-size-large">the quick brown fox jumps over the lazy dog</span>
-      </p>
-      <p>
-        <span class="font-size-huge">the quick brown fox jumps over the lazy dog</span>
-      </p>
-    </div>
-
-    <br>
-
-    <div class="blogpost-footer">
-      <div class="blogpost-tags text-muted">
-        <span class="blogpost-tag">tags</span>
-        <span class="blogpost-tag">tags</span>
-        <span class="blogpost-tag">tags</span>
-      </div>
-      <div class="blogpost-sharing">
-        <br>
-        <button class="btn btn-outline-secondary share-button">
+    <div class="blogpost-sharing">
+      <br>
+      <button class="btn btn-outline-secondary share-button">
           <i class="fa fa-facebook-square" aria-hidden="true"></i>
         </button>
-        <button class="btn btn-outline-secondary share-button">
+      <button class="btn btn-outline-secondary share-button">
           <i class="fa fa-instagram" aria-hidden="true"></i>
         </button>
-        <button class="btn btn-outline-secondary share-button">
+      <button class="btn btn-outline-secondary share-button">
           <i class="fa fa-pinterest" aria-hidden="true"></i>
         </button>
-      </div>
     </div>
-
   </div>
+
 </div>
