--- a/angular-src/src/app/components/dashboard/posts/posts.component.html
+++ b/angular-src/src/app/components/dashboard/posts/posts.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let post of posts">
-  {{post.id}}
+<!--<div *ngFor="let p of posts">
+  {{p.id}}
+</div>-->
+<bouncing-loader *ngIf="!post"></bouncing-loader>
+<div *ngIf="post">
+  <blogpost [blogpost]="post"></blogpost>
 </div>
