--- a/angular-src/src/app/components/auth/login/login.component.html
+++ b/angular-src/src/app/components/auth/login/login.component.html
@@ -1,8 +1,10 @@
-<form class="form-signin">
-  <label for="inputEmail" class="sr-only">Username</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
-  <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-  <br>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-</form>
+<div class="login-component-wrapper">
+  <form #loginForm="ngForm" (ngSubmit)="submitForm()" class="form-signin">
+    <label for="inputEmail" class="sr-only">Username</label>
+    <input [(ngModel)]="form.username" type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input [(ngModel)]="form.password" type="password" name="password" class="form-control" placeholder="Password" required>
+    <p [ngClass]="{'message-hidden': !formHasError}" class="error-message">Invalid credentials!</p>
+    <button (click)="loginForm.reset()" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  </form>
+</div>
