--- a/angular-src/src/app/components/views/footer/footer.component.html
+++ b/angular-src/src/app/components/views/footer/footer.component.html
@@ -1,8 +1,7 @@
 <div class="footer-component-wrapper">
   <footer class="footer">
     <div class="container">
-      <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p>New to Bootstrap?</p>
+      <p>&copy; Footer text</p>
     </div>
   </footer>
 </div>
