--- a/angular-src/src/app/components/dashboard/posts/posts.component.html
+++ b/angular-src/src/app/components/dashboard/posts/posts.component.html
@@ -1,6 +1,18 @@
 <div class="dashboard-posts-component-wrapper">
   <bouncing-loader *ngIf="!posts"></bouncing-loader>
   <div *ngIf="posts">
-    <blogpost *ngFor="let post of posts" [blogpost]="post"></blogpost>
+    <div *ngFor="let post of posts">
+      <div class="">
+        {{post.title}}
+        <div class="">
+          <button class="btn btn-secondary">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit
+          </button>
+          <button class="btn btn-danger">
+            <i class="fa fa-trash" aria-hidden="true"></i> Delete
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
