--- a/angular-src/src/app/components/core/components/wysiwyg/wysiwyg.component.html
+++ b/angular-src/src/app/components/core/components/wysiwyg/wysiwyg.component.html
@@ -15,7 +15,7 @@
                     Last autosave: {{lastAutosave}}
                 </p>
                 <div class="editor-buttons">
-                    <button class="btn btn-danger">
+                    <button (click)="deleteDraft()" type="button" class="btn btn-danger">
                         <i class="fa fa-trash-o fa-lg"></i> Delete
                     </button>
                     <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#postPreviewModal">
