--- a/angular-src/src/app/components/dashboard/posts/posts.component.html
+++ b/angular-src/src/app/components/dashboard/posts/posts.component.html
@@ -1,16 +1,19 @@
 <div class="dashboard-posts-component-wrapper">
-  <bouncing-loader *ngIf="!posts"></bouncing-loader>
-  <div *ngIf="posts">
-    <div *ngFor="let post of posts">
-      <div class="">
-        {{post.title}}
+  <div>
+    <bouncing-loader *ngIf="!blogposts"></bouncing-loader>
+    <div *ngIf="blogposts">
+      <h2>Published Blogposts</h2>
+      <div *ngFor="let blogpost of blogposts">
         <div class="">
-          <button class="btn btn-secondary">
+          {{blogpost.title}}
+          <div class="">
+            <button class="btn btn-secondary">
             <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit
           </button>
-          <button class="btn btn-danger">
+            <button class="btn btn-danger">
             <i class="fa fa-trash" aria-hidden="true"></i> Delete
           </button>
+          </div>
         </div>
       </div>
     </div>
